--- a/index.html
+++ b/index.html
@@ -68,12 +68,7 @@
            	<div class="container flex">
            		<div class="aboutme">
            			<h2>This is <br> <span>Anoshua Debnath</span></h2>
-           			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-           			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-           			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-           			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-           			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-           			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+           			<p>I am a girl. I am in class 4. my school name is Sorkari Adorsho Shishu</p>
            		</div>
            		<div class="mypicture">
            			<img src="anoshua1.jpg">
