--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             		</div>
             		<div class="feature">
             			<h2>Watching</h2>
-            			<p>I like watching Miraculous Ladybug and Cat Noir.</p>
+            			<p>My favourite  cartoon is Miraculous Ladybug & Cat Noir.</p>
             	    </div>
             	</div>
             </section>
@@ -68,7 +68,7 @@
            	<div class="container flex">
            		<div class="aboutme">
            			<h2>This is <br> <span>Anoshua Debnath</span></h2>
-           			<p>I am a girl. I am in class 4. my school name is Sorkari Adorsho Shishu</p>
+                <p>I am a girl. I am in class 4. my school name is Sorkari Adorsho Shishu Biddaloy.I like to play batminton with my friends. I like to reading science book. My favourite  cartoon is Miraculous Ladybug & Cat Noir.I like to travel with my parents and sister. </p>
            		</div>
            		<div class="mypicture">
            			<img src="anoshua1.jpg">
